--- a/src/styles.sass
+++ b/src/styles.sass
@@ -137,6 +137,7 @@ body
     font-weight: 400
     color: #ffffff
     text-shadow: 1px 1px 2px #000000
+    cursor: pointer
 
     &:disabled
       filter: opacity(0.5)
